<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin1x"
    app:cardElevation="@dimen/elevation1x">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin1x">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cart_row_name"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/cart_item_name_hint"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/cart_row_expression"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="none"
                android:hint="@string/cart_item_expression_hint"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:id="@+id/cart_row_value"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin1x"
                android:textColor="?attr/colorPrimary"
                android:textDirection="ltr" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/cart_row_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cart_delete_item"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
